--- a/components/services/prov-o/includes/qualifed-forms-expanded.html
+++ b/components/services/prov-o/includes/qualifed-forms-expanded.html
@@ -22,7 +22,7 @@
     <td><a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlproperty">prov:wasEndedBy</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd" class="owlproperty">prov:qualifiedEnd</a></td>
     <td><a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a></td>
-    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom" class="owlproperty">prov:wasQuotedFrom</a></td>
@@ -40,6 +40,6 @@
     <td><a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlproperty">prov:wasStartedBy</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedStart" href="#qualifiedStart" class="owlproperty">prov:qualifiedStart</a></td>
     <td><a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a></td>
-    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
 </table>
