fixed ontoloyg reference to hg version cf7deb6c5f3e; corrected extra space before <sup>

--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -3,13 +3,13 @@
      class="prov-collections owl-classes at-a-glance">
   <ul class="hlist">
     <li>
-      <a href="#Collection">prov:Collection</a>
+      <a href="#Dictionary">prov:Dictionary</a>
     </li>
     <li>
-      <a href="#CollectionInvolvement">prov:CollectionInvolvement</a>
+      <a href="#DictionaryInvolvement">prov:DictionaryInvolvement</a>
     </li>
     <li>
-      <a href="#EmptyCollection">prov:EmptyCollection</a>
+      <a href="#EmptyDictionary">prov:EmptyDictionary</a>
     </li>
     <li>
       <a href="#Insertion">prov:Insertion</a>
@@ -30,13 +30,13 @@
      class="prov-collections owl-properties at-a-glance">
   <ul class="hlist">
     <li class="object-property">
-      <a href="#collection">prov:collection</a>
-    </li>
-    <li class="object-property">
       <a href="#derivedByInsertionFrom">prov:derivedByInsertionFrom</a>
     </li>
     <li class="object-property">
       <a href="#derivedByRemovalFrom">prov:derivedByRemovalFrom</a>
+    </li>
+    <li class="object-property">
+      <a href="#dictionary">prov:dictionary</a>
     </li>
     <li class="object-property">
       <a href="#inserted">prov:inserted</a>
