--- a/components/services/prov-o/includes/at-a-glance-qualified.html
+++ b/components/services/prov-o/includes/at-a-glance-qualified.html
@@ -33,6 +33,9 @@
       <a href="#InstantaneousEvent">prov:InstantaneousEvent</a>
     </li>
     <li>
+      <a href="#Invalidation">prov:Invalidation</a>
+    </li>
+    <li>
       <a href="#Involvement">prov:Involvement</a>
     </li>
     <li>
