--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -50,8 +50,7 @@
 
       <dt>in range of</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#atLocation" href="#atLocation">prov:atLocation</a>
-        <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#atLocation" href="#atLocation">prov:atLocation</a><sup class="type-op" title="object property">op</sup>
       </dd>
     </dl>
   </div>
@@ -78,8 +77,7 @@
 
       <dt>in range of</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hasAnnotation" href="#hasAnnotation">prov:hasAnnotation</a>
-        <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#hasAnnotation" href="#hasAnnotation">prov:hasAnnotation</a><sup class="type-op" title="object property">op</sup>
       </dd>
     </dl>
   </div>
@@ -169,8 +167,7 @@
      class="prov-expanded owl-properties crossreference">
   <div id="alternateOf" class="entity">
     <h3>
-      Property: <a href="#alternateOf"><span class="dotted" title="http://www.w3.org/ns/prov#alternateOf">prov:alternateOf</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#alternateOf"><span class="dotted" title="http://www.w3.org/ns/prov#alternateOf">prov:alternateOf</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -211,8 +208,7 @@
 
   <div id="atLocation" class="entity">
     <h3>
-      Property: <a href="#atLocation"><span class="dotted" title="http://www.w3.org/ns/prov#atLocation">prov:atLocation</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#atLocation"><span class="dotted" title="http://www.w3.org/ns/prov#atLocation">prov:atLocation</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -245,8 +241,7 @@
 
   <div id="generated" class="entity">
     <h3>
-      Property: <a href="#generated"><span class="dotted" title="http://www.w3.org/ns/prov#generated">prov:generated</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#generated"><span class="dotted" title="http://www.w3.org/ns/prov#generated">prov:generated</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -305,8 +300,7 @@
 
   <div id="hadOriginalSource" class="entity">
     <h3>
-      Property: <a href="#hadOriginalSource"><span class="dotted" title="http://www.w3.org/ns/prov#hadOriginalSource">prov:hadOriginalSource</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#hadOriginalSource"><span class="dotted" title="http://www.w3.org/ns/prov#hadOriginalSource">prov:hadOriginalSource</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -366,8 +360,7 @@
 
   <div id="hasAnnotation" class="entity">
     <h3>
-      Property: <a href="#hasAnnotation"><span class="dotted" title="http://www.w3.org/ns/prov#hasAnnotation">prov:hasAnnotation</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#hasAnnotation"><span class="dotted" title="http://www.w3.org/ns/prov#hasAnnotation">prov:hasAnnotation</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -397,8 +390,7 @@
 
   <div id="specializationOf" class="entity">
     <h3>
-      Property: <a href="#specializationOf"><span class="dotted" title="http://www.w3.org/ns/prov#specializationOf">prov:specializationOf</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#specializationOf"><span class="dotted" title="http://www.w3.org/ns/prov#specializationOf">prov:specializationOf</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -439,8 +431,7 @@
 
   <div id="tracedTo" class="entity">
     <h3>
-      Property: <a href="#tracedTo"><span class="dotted" title="http://www.w3.org/ns/prov#tracedTo">prov:tracedTo</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#tracedTo"><span class="dotted" title="http://www.w3.org/ns/prov#tracedTo">prov:tracedTo</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -515,8 +506,7 @@
 
   <div id="wasEndedBy" class="entity">
     <h3>
-      Property: <a href="#wasEndedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasEndedBy">prov:wasEndedBy</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#wasEndedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasEndedBy">prov:wasEndedBy</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -537,7 +527,7 @@
         <dd>
           <ul>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlclass">prov:wasAssociatedWith</a>
+              <a title="http://www.w3.org/ns/prov#involved" href="#involved" class="owlclass">prov:involved</a>
             </li>
           </ul>
         </dd>
@@ -547,6 +537,15 @@
           <ul>
             <li>
               <a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a>
+            </li>
+          </ul>
+        </dd>
+
+        <dt>has range</dt>
+        <dd>
+          <ul>
+            <li>
+              <a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a>
             </li>
           </ul>
         </dd>
@@ -569,8 +568,7 @@
 
   <div id="wasQuotedFrom" class="entity">
     <h3>
-      Property: <a href="#wasQuotedFrom"><span class="dotted" title="http://www.w3.org/ns/prov#wasQuotedFrom">prov:wasQuotedFrom</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#wasQuotedFrom"><span class="dotted" title="http://www.w3.org/ns/prov#wasQuotedFrom">prov:wasQuotedFrom</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -632,8 +630,7 @@
 
   <div id="wasRevisionOf" class="entity">
     <h3>
-      Property: <a href="#wasRevisionOf"><span class="dotted" title="http://www.w3.org/ns/prov#wasRevisionOf">prov:wasRevisionOf</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#wasRevisionOf"><span class="dotted" title="http://www.w3.org/ns/prov#wasRevisionOf">prov:wasRevisionOf</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -695,8 +692,7 @@
 
   <div id="wasStartedBy" class="entity">
     <h3>
-      Property: <a href="#wasStartedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasStartedBy">prov:wasStartedBy</span></a>
-      <sup class="type-op" title="object property">op</sup>
+      Property: <a href="#wasStartedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasStartedBy">prov:wasStartedBy</span></a><sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
@@ -717,7 +713,7 @@
         <dd>
           <ul>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlclass">prov:wasAssociatedWith</a>
+              <a title="http://www.w3.org/ns/prov#involved" href="#involved" class="owlclass">prov:involved</a>
             </li>
           </ul>
         </dd>
