--- a/components/services/prov-o/includes/cross-reference-collections.html
+++ b/components/services/prov-o/includes/cross-reference-collections.html
@@ -1,5 +1,7 @@
 <div    id="prov-collections-owl-classes-crossreference"
-     class="prov-collections owl-classes crossreference">
+     class="prov-collections owl-classes crossreference"
+     xmlns:dcterms="http://purl.org/dc/terms/"
+     xmlns:prov="http://www.w3.org/ns/prov#">
 
   <div id="Dictionary" class="entity">
     <h3>
@@ -12,9 +14,11 @@
     <div class="definition"><p>A dictionary is an entity that provides a structure to some constituents, which are themselves entities. These constituents are said to be member of the dictionary.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Dictionary" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Dictionary"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Dictionary.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Dictionary.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Dictionary.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -60,9 +64,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#DictionaryInvolvement</p>
 
-    <div class="example">
+    <div about="#example-for-class-DictionaryInvolvement" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#DictionaryInvolvement"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_DictionaryInvolvement.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_DictionaryInvolvement.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_DictionaryInvolvement.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -96,9 +102,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#EmptyDictionary</p>
 
-    <div class="example">
+    <div about="#example-for-class-EmptyDictionary" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#EmptyDictionary"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_EmptyDictionary.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_EmptyDictionary.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_EmptyDictionary.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -123,9 +131,11 @@
     <div class="definition"><p>Insertion is a derivation that transforms a dictionary into another, by insertion of one or more key-value pairs.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Insertion" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Insertion"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Insertion.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Insertion.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Insertion.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -163,9 +173,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#KeyValuePair</p>
 
-    <div class="example">
+    <div about="#example-for-class-KeyValuePair" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#KeyValuePair"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_KeyValuePair.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_KeyValuePair.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_KeyValuePair.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -195,9 +207,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Membership</p>
 
-    <div class="example">
+    <div about="#example-for-class-Membership" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Membership"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Membership.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Membership.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Membership.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -232,9 +246,11 @@
     <div class="definition"><p>Removal is a derivation that transforms a dictionary into another, by removing one or more key-value pairs.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Removal" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Removal"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Removal.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Removal.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Removal.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -264,7 +280,8 @@
   </div>
 </div>
 <div    id="prov-collections-owl-properties-crossreference"
-     class="prov-collections owl-properties crossreference">
+     class="prov-collections owl-properties crossreference"
+     xmlns:prov="http://www.w3.org/ns/prov#">
   <div id="derivedByInsertionFrom" class="entity">
     <h3>
       Property: <a href="#derivedByInsertionFrom"><span class="dotted" title="http://www.w3.org/ns/prov#derivedByInsertionFrom">prov:derivedByInsertionFrom</span></a><sup class="type-op" title="object property">op</sup>
@@ -274,9 +291,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#derivedByInsertionFrom</p>
 
-    <div class="example">
+    <div about="#example-for-property-derivedByInsertionFrom" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#derivedByInsertionFrom"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_derivedByInsertionFrom.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_derivedByInsertionFrom.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_derivedByInsertionFrom.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -336,9 +355,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#derivedByRemovalFrom</p>
 
-    <div class="example">
+    <div about="#example-for-property-derivedByRemovalFrom" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#derivedByRemovalFrom"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_derivedByRemovalFrom.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_derivedByRemovalFrom.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_derivedByRemovalFrom.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -398,9 +419,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#dictionary</p>
 
-    <div class="example">
+    <div about="#example-for-property-dictionary" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#dictionary"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_dictionary.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_dictionary.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_dictionary.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -448,9 +471,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#inserted</p>
 
-    <div class="example">
+    <div about="#example-for-property-inserted" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#inserted"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_inserted.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_inserted.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_inserted.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -489,9 +514,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#key</p>
 
-    <div class="example">
+    <div about="#example-for-property-key" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#key"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_key.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_key.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_key.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -531,9 +558,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#member</p>
 
-    <div class="example">
+    <div about="#example-for-property-member" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#member"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_member.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_member.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_member.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -572,9 +601,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#membership</p>
 
-    <div class="example">
+    <div about="#example-for-property-membership" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#membership"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_membership.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_membership.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_membership.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -613,9 +644,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#qualifiedInsertion</p>
 
-    <div class="example">
+    <div about="#example-for-property-qualifiedInsertion" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#qualifiedInsertion"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_qualifiedInsertion.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_qualifiedInsertion.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_qualifiedInsertion.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -659,9 +692,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#qualifiedRemoval</p>
 
-    <div class="example">
+    <div about="#example-for-property-qualifiedRemoval" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#qualifiedRemoval"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_qualifiedRemoval.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_qualifiedRemoval.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_qualifiedRemoval.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -705,9 +740,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#removedKey</p>
 
-    <div class="example">
+    <div about="#example-for-property-removedKey" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#removedKey"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_removedKey.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_removedKey.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_removedKey.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -746,9 +783,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#value</p>
 
-    <div class="example">
+    <div about="#example-for-property-value" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#value"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_value.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_value.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_value.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
