--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -1,5 +1,7 @@
 <div    id="prov-expanded-owl-classes-crossreference"
-     class="prov-expanded owl-classes crossreference">
+     class="prov-expanded owl-classes crossreference"
+     xmlns:dcterms="http://purl.org/dc/terms/"
+     xmlns:prov="http://www.w3.org/ns/prov#">
 
   <div id="Account" class="entity">
     <h3>
@@ -12,9 +14,11 @@
     <div class="definition"><p>An account is any mechanism by which a set of provenance descriptions can be bundled up and named.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Account" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Account"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Account.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Account.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Account.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -39,9 +43,11 @@
     <div class="definition"><p>A location can be an identifiable geographic place (ISO 19112), but it can also be a non-geographic place such as a directory, row, or column. As such, there are numerous ways in which location can be expressed, such as by a coordinate, address, landmark, and so forth.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Location" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Location"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Location.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Location.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Location.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -66,9 +72,11 @@
     <div class="definition"><p>Attribute-value pairs occurring in notes are application specific.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Note" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Note"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Note.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Note.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Note.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -93,9 +101,11 @@
     <div class="definition"><p>Agents of type Organization are social institutions such as companies, societies etc.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Organization" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Organization"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Organization.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Organization.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Organization.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -120,9 +130,11 @@
     <div class="definition"><p>Agents of type Person are people.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-Person" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#Person"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Person.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Person.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Person.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -147,9 +159,11 @@
     <div class="definition"><p>A software agent is running software.</p>
     </div>
 
-    <div class="example">
+    <div about="#example-for-class-SoftwareAgent" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#SoftwareAgent"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_SoftwareAgent.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_SoftwareAgent.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_SoftwareAgent.ttl"%}{% endescape %}</pre>
     </div>
 
     <dl class="description">
@@ -164,7 +178,8 @@
   </div>
 </div>
 <div    id="prov-expanded-owl-properties-crossreference"
-     class="prov-expanded owl-properties crossreference">
+     class="prov-expanded owl-properties crossreference"
+     xmlns:prov="http://www.w3.org/ns/prov#">
   <div id="alternateOf" class="entity">
     <h3>
       Property: <a href="#alternateOf"><span class="dotted" title="http://www.w3.org/ns/prov#alternateOf">prov:alternateOf</span></a><sup class="type-op" title="object property">op</sup>
@@ -174,9 +189,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#alternateOf</p>
 
-    <div class="example">
+    <div about="#example-for-property-alternateOf" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#alternateOf"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_alternateOf.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_alternateOf.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_alternateOf.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -215,9 +232,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#atLocation</p>
 
-    <div class="example">
+    <div about="#example-for-property-atLocation" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#atLocation"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_atLocation.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_atLocation.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_atLocation.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -248,9 +267,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#generated</p>
 
-    <div class="example">
+    <div about="#example-for-property-generated" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#generated"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_generated.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_generated.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_generated.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -307,9 +328,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hadOriginalSource</p>
 
-    <div class="example">
+    <div about="#example-for-property-hadOriginalSource" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#hadOriginalSource"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hadOriginalSource.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hadOriginalSource.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hadOriginalSource.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -367,9 +390,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hasAnnotation</p>
 
-    <div class="example">
+    <div about="#example-for-property-hasAnnotation" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#hasAnnotation"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hasAnnotation.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hasAnnotation.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hasAnnotation.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -397,9 +422,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#specializationOf</p>
 
-    <div class="example">
+    <div about="#example-for-property-specializationOf" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#specializationOf"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_specializationOf.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_specializationOf.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_specializationOf.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -438,9 +465,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#tracedTo</p>
 
-    <div class="example">
+    <div about="#example-for-property-tracedTo" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#tracedTo"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_tracedTo.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_tracedTo.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_tracedTo.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -513,9 +542,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasEndedBy</p>
 
-    <div class="example">
+    <div about="#example-for-property-wasEndedBy" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#wasEndedBy"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasEndedBy.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasEndedBy.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasEndedBy.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -575,9 +606,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasQuotedFrom</p>
 
-    <div class="example">
+    <div about="#example-for-property-wasQuotedFrom" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#wasQuotedFrom"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasQuotedFrom.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasQuotedFrom.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasQuotedFrom.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -637,9 +670,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasRevisionOf</p>
 
-    <div class="example">
+    <div about="#example-for-property-wasRevisionOf" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#wasRevisionOf"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasRevisionOf.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasRevisionOf.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasRevisionOf.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
@@ -699,9 +734,11 @@
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasStartedBy</p>
 
-    <div class="example">
+    <div about="#example-for-property-wasStartedBy" typeof="prov:Entity" class="example">
+      <span rel="dcterms:subject" resource="http://www.w3.org/ns/prov#wasStartedBy"></span>
       <strong>Example</strong>
-      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasStartedBy.ttl"%}{% endescape %}</pre>
+      <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasStartedBy.ttl"
+           property="prov:value">{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasStartedBy.ttl"%}{% endescape %}</pre>
     </div>
 
     <div class="description">
