CompleteMembership added to cross reference

--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -3,6 +3,9 @@
      class="prov-collections owl-classes at-a-glance">
   <ul class="hlist">
     <li>
+      <a href="#CompleteMembership">prov:CompleteMembership</a>
+    </li>
+    <li>
       <a href="#Dictionary">prov:Dictionary</a>
     </li>
     <li>
