provo removed multiple id= on auto-made divs

--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -1,5 +1,5 @@
 
-<div    id="prov-collections-owl-classes-at-a-glance"
+<div
      class="prov-collections owl-classes at-a-glance">
   <ul class="hlist">
     <li>
@@ -29,7 +29,7 @@
   </ul>
 </div>
 
-<div    id="prov-collections-owl-properties-at-a-glance"
+<div
      class="prov-collections owl-properties at-a-glance">
   <ul class="hlist">
     <li class="object-property">
