--- a/components/services/prov-o/includes/at-a-glance-expanded.html
+++ b/components/services/prov-o/includes/at-a-glance-expanded.html
@@ -1,5 +1,5 @@
 
-<div    id="prov-expanded-owl-classes-at-a-glance"
+<div
      class="prov-expanded owl-classes at-a-glance">
   <ul class="hlist">
     <li>
@@ -23,7 +23,7 @@
   </ul>
 </div>
 
-<div    id="prov-expanded-owl-properties-at-a-glance"
+<div
      class="prov-expanded owl-properties at-a-glance">
   <ul class="hlist">
     <li class="object-property">
