--- a/components/services/prov-o/includes/at-a-glance-qualified.html
+++ b/components/services/prov-o/includes/at-a-glance-qualified.html
@@ -1,5 +1,5 @@
 
-<div    id="prov-qualified-owl-classes-at-a-glance"
+<div
      class="prov-qualified owl-classes at-a-glance">
   <ul class="hlist">
     <li>
@@ -71,7 +71,7 @@
   </ul>
 </div>
 
-<div    id="prov-qualified-owl-properties-at-a-glance"
+<div
      class="prov-qualified owl-properties at-a-glance">
   <ul class="hlist">
     <li class="object-property">
