--- a/components/services/prov-o/includes/at-a-glance-starting-point.html
+++ b/components/services/prov-o/includes/at-a-glance-starting-point.html
@@ -1,5 +1,5 @@
 
-<div    id="prov-starting-point-owl-classes-at-a-glance"
+<div
      class="prov-starting-point owl-classes at-a-glance">
   <ul class="hlist">
     <li>
@@ -14,7 +14,7 @@
   </ul>
 </div>
 
-<div    id="prov-starting-point-owl-properties-at-a-glance"
+<div
      class="prov-starting-point owl-properties at-a-glance">
   <ul class="hlist">
     <li class="object-property">
