--- a/components/services/prov-o/includes/cross-reference-collections.html
+++ b/components/services/prov-o/includes/cross-reference-collections.html
@@ -1,4 +1,4 @@
-<div    id="prov-collections-owl-classes-crossreference"
+<div
      class="prov-collections owl-classes crossreference"
      xmlns:dcterms="http://purl.org/dc/terms/"
      xmlns:prov="http://www.w3.org/ns/prov#">
@@ -311,7 +311,7 @@
     </dl>
   </div>
 </div>
-<div    id="prov-collections-owl-properties-crossreference"
+<div
      class="prov-collections owl-properties crossreference"
      xmlns:prov="http://www.w3.org/ns/prov#">
   <div id="derivedByInsertionFrom" class="entity">
