--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -1,4 +1,4 @@
-<div    id="prov-expanded-owl-classes-crossreference"
+<div
      class="prov-expanded owl-classes crossreference"
      xmlns:dcterms="http://purl.org/dc/terms/"
      xmlns:prov="http://www.w3.org/ns/prov#">
@@ -177,7 +177,7 @@
     </dl>
   </div>
 </div>
-<div    id="prov-expanded-owl-properties-crossreference"
+<div
      class="prov-expanded owl-properties crossreference"
      xmlns:prov="http://www.w3.org/ns/prov#">
   <div id="alternateOf" class="entity">
@@ -336,6 +336,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>An original source refers to the source material that is closest to the person, information, period, or idea being studied. An original source relation is a particular case of derivation that aims to give credit to the source that originated some information.</p>
+      </div>
       <dl>
 
         <dt>has super-properties</dt>
