changed <dl><div> to <dl><dd>

--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -22,8 +22,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Note that there are kinds of accounts (e.g. handwritten letters, audio recordings, etc.) that are not expressed in PROV-O, but can be still be described by PROV-O.</p>
-    </div>
+    <dd class="comment"><p>Note that there are kinds of accounts (e.g. handwritten letters, audio recordings, etc.) that are not expressed in PROV-O, but can be still be described by PROV-O.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -51,8 +51,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>A location can be an identifiable geographic place (ISO 19112), but it can also be a non-geographic place such as a directory, row, or column. As such, there are numerous ways in which location can be expressed, such as by a coordinate, address, landmark, and so forth.</p>
-    </div>
+    <dd class="comment"><p>A location can be an identifiable geographic place (ISO 19112), but it can also be a non-geographic place such as a directory, row, or column. As such, there are numerous ways in which location can be expressed, such as by a coordinate, address, landmark, and so forth.</p>
+    </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -80,8 +80,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Attribute-value pairs occurring in notes are application specific.</p>
-    </div>
+    <dd class="comment"><p>Attribute-value pairs occurring in notes are application specific.</p>
+    </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -109,8 +109,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Agents of type Organization are social institutions such as companies, societies etc.</p>
-    </div>
+    <dd class="comment"><p>Agents of type Organization are social institutions such as companies, societies etc.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -138,8 +138,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Agents of type Person are people.</p>
-    </div>
+    <dd class="comment"><p>Agents of type Person are people.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -167,8 +167,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>A software agent is running software.</p>
-    </div>
+    <dd class="comment"><p>A software agent is running software.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
