--- a/components/services/prov-o/includes/cross-reference-collections.html
+++ b/components/services/prov-o/includes/cross-reference-collections.html
@@ -20,8 +20,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Indicates that no other member belongs to the collection, that is all the prov:member stated for this CompleteMembership constitutes all members of the collection.</p>
-    </div>
+    <dd class="comment"><p>Indicates that no other member belongs to the collection, that is all the prov:member stated for this CompleteMembership constitutes all members of the collection.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -49,10 +49,10 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>This concept allows for the provenance of the dictionary, but also of its constituents to be expressed. Such a notion of dictionary corresponds to a wide variety of concrete data structures, such as a maps or associative arrays.</p>
-    </div>
-    <div class="comment"><p>A given dictionary forms a given structure for its members. A different structure (obtained either by insertion or removal of members) constitutes a different dictionary.</p>
-    </div>
+    <dd class="comment"><p>This concept allows for the provenance of the dictionary, but also of its constituents to be expressed. Such a notion of dictionary corresponds to a wide variety of concrete data structures, such as a maps or associative arrays.</p>
+    </dd>
+    <dd class="comment"><p>A given dictionary forms a given structure for its members. A different structure (obtained either by insertion or removal of members) constitutes a different dictionary.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -99,8 +99,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>prov:DictionaryInvolvement provides descriptions of any binary involvement between any instance and a prov:Dictionary.</p>
-    </div>
+    <dd class="comment"><p>prov:DictionaryInvolvement provides descriptions of any binary involvement between any instance and a prov:Dictionary.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -137,8 +137,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>An empty dictionary.</p>
-    </div>
+    <dd class="comment"><p>An empty dictionary.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -166,8 +166,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Insertion is a derivation that transforms a dictionary into another, by insertion of one or more key-value pairs.</p>
-    </div>
+    <dd class="comment"><p>Insertion is a derivation that transforms a dictionary into another, by insertion of one or more key-value pairs.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
@@ -208,8 +208,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>A key-value pair. Part of a prov:Collection through prov:Membership. The key is any RDF Literal, the value is a prov:Entity.</p>
-    </div>
+    <dd class="comment"><p>A key-value pair. Part of a prov:Collection through prov:Membership. The key is any RDF Literal, the value is a prov:Entity.</p>
+    </dd>
 
       <dt>in domain of</dt>
       <dd>
@@ -242,8 +242,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Described members of a collection, in the form of key-value pairs. The Membership resource can also be annotated with attributes.</p>
-    </div>
+    <dd class="comment"><p>Described members of a collection, in the form of key-value pairs. The Membership resource can also be annotated with attributes.</p>
+    </dd>
 
       <dt>in domain of</dt>
       <dd>
@@ -286,8 +286,8 @@
     </div>
 
     <dl class="description">
-    <div class="comment"><p>Removal is a derivation that transforms a dictionary into another, by removing one or more key-value pairs.</p>
-    </div>
+    <dd class="comment"><p>Removal is a derivation that transforms a dictionary into another, by removing one or more key-value pairs.</p>
+    </dd>
 
       <dt>is subclass of</dt>
       <dd>
